--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/style.css">
-    <script src="static/data.js"></script>
-    <script src="static/app.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
 <body>
@@ -29,18 +28,18 @@
                 <ul class="list-group" id="filters">
                     <li class="filter list-group-item">
                     <label for="date">Enter a Date Below To See That Day's UFO Sightings</label>
-                    <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                    <input class="form-control" id="datetime" type="text" placeholder="1/6/2010">
                     </li>
                 </ul>
                 </div>
-                <button id="filter-btn" type="button" class="btn btn-default">Click Here To See Your Results</button>
+                <button id="filter-btn" type="button" class="btn btn-default">Click Here To Filter Your Results</button>
             </form>
             </div>
         </div>
     </div>
 
     <div class="container">
-        <div id="table-area" class="">
+        <div id="table-area">
             <table id="ufo-table" class="table table-striped">
                 <thead>
                 <tr>
@@ -60,10 +59,13 @@
 
     <div class="container">    
         <footer class="footer fixed-bottom py-3">
-            <span class="text-muted">Don't Let Them Tell You You're Crazy!!!</span>
+            Don't Let Them Tell You You're Crazy!!!
         </footer>
     </div>
 
+    <script src="static/data.js"></script>
+    <script src="static/app.js"></script>
+    
 </body>
 
 </html>
